force-app/main/default/objects/SA2__c/SA2__c.object-meta.xml
<CustomObject>
    <label>SA2</label>
    <nameField>
        <label>SA2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SA2</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>