force-app/main/default/objects/SA2__c/fields/Aged_Care_Planning_Region__c.field-meta.xml
<CustomField>
    <fullName>Aged_Care_Planning_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aged Care Planning Region</label>
    <referenceTo>Aged_Care_Planning_Region__c</referenceTo>
    <relationshipLabel>SA2</relationshipLabel>
    <relationshipName>SA2</relationshipName>
    <type>Lookup</type>
</CustomField>