force-app/main/default/objects/SA2__c/fields/SA2_Code__c.field-meta.xml
<CustomField>
    <fullName>SA2_Code__c</fullName>
    <label>SA2 Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>