force-app/main/default/objects/SA2__c/recordTypes/GPMS_SA2.recordType-meta.xml
<RecordType>
    <fullName>GPMS_SA2</fullName>
    <active>true</active>
    <description>SA2 Area</description>
    <label>SA2</label>
</RecordType>